# adbc-quickstarts

./: .gitignore  README.md
bigquery/: README.md
cedardb/: README.md
citus/: README.md
clickhouse/: README.md
cockroachdb/: README.md
cpp/: README.md
cpp/mysql/: CMakeLists.txt  Makefile  README.md  games.sql
cpp/mysql/greptimedb/: CMakeLists.txt  Makefile  README.md  main.cpp
cpp/mysql/mariadb/: CMakeLists.txt  Makefile  README.md  main.cpp
cpp/mysql/mysql/: CMakeLists.txt  README.md  main.cpp
cpp/mysql/oceanbase/: Makefile  README.md  main.cpp
cpp/mysql/singlestore/: CMakeLists.txt  Makefile  README.md  main.cpp
cpp/mysql/tidb/: CMakeLists.txt  Makefile  README.md  main.cpp  pixi.toml
cpp/mysql/vitess/: CMakeLists.txt  Makefile  README.md  main.cpp
cratedb/: README.md
databricks/: README.md
datafusion/: README.md
doris/: README.md
dremio/: README.md
duckdb/: README.md
exasol/: README.md
gizmosql/: README.md
go/: README.md  go.mod
influxdb/: README.md
java/: README.md
javascript/: .npmrc  README.md  package.json  pnpm-lock.yaml
kotlin/: README.md
mariadb/: README.md
motherduck/: README.md
mssql/: README.md
mysql/: README.md
neon/: README.md
oracle/: README.md
paradedb/: README.md
postgresql/: README.md
python/: README.md
quack/: README.md
r/: README.md
redshift/: README.md
ruby/: README.md
rust/: Cargo.toml  README.md
sail/: README.md
scripts/: restructure.py
singlestore/: README.md
snowflake/: README.md
spark/: README.md
sqlite/: README.md
starrocks/: README.md
tidb/: README.md
(+1368 files in other folders)
